--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
 <h3>DAFTAR Ai Mr Ferdy SEKARANG JUGA !!!</h3>
 </div>
 <amp-img class='banner' height='500' layout='intrinsic' src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgE1y4Mb-evdDikxJfIat3cXLHGimf_0441Pn5n6KYGqXZUIBqBoXSwYWVE4w2lyp4722Tbyy_exTQX6oZPpgX_0c8ma12NQFK65HRAXp_b4-7GgJa8tDQvwCTQR3hla98_rp_uEkVel2soB-cn5GUX5kEdXZcgyNvFq_rBIgLeW-fl9TXLJ5iobhf5BGn_/s1600/antirungkad.png' width='500'></amp-img>
-<a class='btn-login' href='/' rel='noreferrer noopener' role='button' target='_blank'>LOGIN</a>
-<a class='btn-daftar' href='/' rel='noreferrer noopener' role='button' target='_blank'>DAFTAR</a>
+<a class='btn-login' href='https://heylink.me/mrferdy' rel='noreferrer noopener' role='button' target='_blank'>LINK AI MR FERDY</a>
+<a class='btn-daftar' href='https://heylink.me/mrferdy' rel='noreferrer noopener' role='button' target='_blank'>ALTERNATIF LINK AI MR FERDY</a>
 <p class='copyright'>&#169; 2024 &#8226; <a href='#' style='color: #ffffff;'>Ai Mr Ferdy</a> &#8226; All Rights Reserved &#8226; AR.</p>
 </div>
 
